stroking alpha constant not respected for pattern
Submitted by nov..@..il.com
Assigned to poppler-bugs
Link to original bug (#101416)
Description
Created attachment 131940 test case
In the attached test case, we stroke a rectangle using a shading pattern. The stroking alpha constant (CA) is set to 0.25 but the stroke is drawn opaquely. It seems to use the nonstroking alpha constant (ca) instead, which is still at the initial value of 1.0.
The test case draws two more shapes for comparison.
-
stroke a rectangle with a solid colour: the stroking alpha constant is respected in this case.
-
fill a rectangle with the shading pattern; the nonstroking alpha constant is respected.
Attachment 131940, "test case":
stroke-alpha-pattern.pdf