[splash, arthur] Use stroking opacity when clipping to a stroke path

When filling a region that is clipped to a stroke path, then the
stroking opacity shall be used rather than the fill opacity.
I couldn't find this in the spec, but it seems to be what
Acrobat does.

BUG: https://gitlab.freedesktop.org/poppler/poppler/-/issues/178